# ros-edge-transfer

./: .gitignore  CMakeLists.txt  README.md  auto.sh  config.yaml  config_e2c.yaml  edge.py  package.xml
scripts/: auto.sh  config.yaml  config_drone.yaml  config_e2c.yaml  edge-drone.py  edge-vehicle.py
